add a few more miniAODv2 samples to master list

--- a/Input/Master74X_25nsMC_ReMiniAOD.ini
+++ b/Input/Master74X_25nsMC_ReMiniAOD.ini
@@ -44,12 +44,12 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns 
+groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns MiniAODv2
 #3*2008.4 (NNLO)
 crosssection = 6025.200000000001
 negWeightFraction = 0.0
-datasetpath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 ##### Drell--Yan high HT tail
 
 [ZJets_HT100to200_Madgraph_Spring15_25ns]
@@ -348,12 +348,12 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns MiniAODv2
 #
 crosssection = 136.02
 negWeightFraction = 0.0
-datasetpath = /ST_t-channel_top_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ST_t-channel_top_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath =  /ST_t-channel_top_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath =  /ST_t-channel_top_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 
 [ST_antitop_tWChannel_5f_Powheg_Spring15_25ns]
@@ -444,24 +444,24 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns MiniAODv2
 #LO cross section from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 360
 negWeightFraction = 0.0
-datasetpath = /WJetsToLNu_HT-200To400_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /WJetsToLNu_HT-200To400_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath = /WJetsToLNu_HT-200To400_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /WJetsToLNu_HT-200To400_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 [WJetsToLNu_HT400to600_Madgraph_Spring15_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns MiniAODv2
 #LO cross section from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 48.9
 negWeightFraction = 0.0
-datasetpath = /WJetsToLNu_HT-400To600_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v3/MINIAODSIM
-localdbspath = /WJetsToLNu_HT-400To600_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v3/MINIAODSIM
+datasetpath =  /WJetsToLNu_HT-400To600_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath =  /WJetsToLNu_HT-400To600_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 [WJetsToLNu_HT600to800_Madgraph_Spring15_25ns]
 status = CREATED
@@ -625,11 +625,11 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 at25ns MiniAODv2
 crosssection = 831.76
 negWeightFraction = 0.254
-datasetpath =  /TT_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath =  /TT_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath =  /TT_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /TT_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 #### Powheg ttbar 
 
@@ -638,11 +638,11 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen TT Powheg Spring15 at25ns MiniAODv2
 crosssection = 831.76
 negWeightFraction = 0.0
-datasetpath =  /TT_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
-localdbspath =  /TT_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
+datasetpath =  /TT_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath =  /TT_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 [TT_Dilepton_Powheg_Spring15_25ns]
 status = CREATED
