add confing for data merging with non-Iso triggers

--- a/CfgMerge/mergeData2015NonIso.ini
+++ b/CfgMerge/mergeData2015NonIso.ini
@@ -2,24 +2,24 @@
 tasks = cutsV28Dilepton
 basePath = /user/jschulte/Cleaning
 MCDatasets = .*_Summer12
-outPath = /user/jschulte/Trees/processedTrees
+outPath = /user/jschulte/Trees/processedTreesTriggerAll
 counterSum = True
 
 [dileptonTree:cutsV28Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
-EESelection = HLTDiEle
+EESelection = HLTDiEleAll
 EEProcessors = overlapHighPt 
 EEFilter = overlapHighPt 
 
 EMuDataset = .*MuEG*
-EMuSelection = HLTMuEG
+EMuSelection = HLTMuEGAll
 EMuProcessors = overlapHighPt 
 EMuFilter = overlapHighPt 
 
 MuMuDataset = .*DoubleMu*
-MuMuSelection = HLTDiMu
+MuMuSelection = HLTDiMuAll
 MuMuProcessors = overlapHighPt 
 MuMuFilter = overlapHighPt 
 
