add a few more miniAODv2 samples to master list

--- a/Input/Master74X_25nsMC_ReMiniAOD.ini
+++ b/Input/Master74X_25nsMC_ReMiniAOD.ini
@@ -336,12 +336,12 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns MiniAODv2
 #
 crosssection = 80.95
 negWeightFraction = 0.0
-datasetpath = /ST_t-channel_antitop_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ST_t-channel_antitop_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath = /ST_t-channel_antitop_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /ST_t-channel_antitop_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 [ST_top_tChannel_4f_Powheg_Spring15_25ns]
 status = CREATED
@@ -426,6 +426,19 @@ localdbspath = /WJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15
 ### WJets Madgraph high HT tail
 
 
+[WJetsToLNu_Madgraph_Spring15_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns MiniAODv2
+#LO cross section from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 1347
+negWeightFraction = 0.0
+datasetpath = /WJetsToLNu_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /WJetsToLNu_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+
+
 [WJetsToLNu_HT100to200_Madgraph_Spring15_25ns]
 status = CREATED
 numevents = -1
@@ -479,12 +492,12 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns MiniAODv2
 #LO cross section from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 5.26
 negWeightFraction = 0.0
-datasetpath = /WJetsToLNu_HT-800To1200_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /WJetsToLNu_HT-800To1200_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath = /WJetsToLNu_HT-800To1200_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /WJetsToLNu_HT-800To1200_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 [WJetsToLNu_HT1200to2500_Madgraph_Spring15_25ns]
 status = CREATED
