update Master List for MC again

--- a/Input/Master74X_25nsMC_ReMiniAOD.ini
+++ b/Input/Master74X_25nsMC_ReMiniAOD.ini
@@ -129,12 +129,12 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns 
+groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns MiniAODv2
 #(LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 0.0
 negWeightFraction = 0.0
-datasetpath = /DYJetsToLL_M-5to50_HT-400to600_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /DYJetsToLL_M-5to50_HT-400to600_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath = /DYJetsToLL_M-5to50_HT-400to600_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /DYJetsToLL_M-5to50_HT-400to600_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 [AStar_HT600toInf_Madgraph_Spring15_25ns]
 status = CREATED
