add a few samples in MiniAODvs to Master lists

--- a/Input/Master74X_25nsMC_ReMiniAOD.ini
+++ b/Input/Master74X_25nsMC_ReMiniAOD.ini
@@ -81,12 +81,12 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns MiniAODv2
 #(LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 5.497
 negWeightFraction = 0.0
-datasetpath = /DYJetsToLL_M-50_HT-400to600_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
-localdbspath = /DYJetsToLL_M-50_HT-400to600_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
+datasetpath = /DYJetsToLL_M-50_HT-400to600_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v2/MINIAODSIM
+localdbspath = /DYJetsToLL_M-50_HT-400to600_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v2/MINIAODSIM
 
 [ZJets_HT600toInf_Madgraph_Spring15_25ns]
 status = CREATED
@@ -258,24 +258,24 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns MiniAODv2
 # NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 1.256
 negWeightFraction = 0.0
-datasetpath = /ZZTo4L_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ZZTo4L_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath = /ZZTo4L_13TeV_powheg_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v2/MINIAODSIM
+localdbspath = /ZZTo4L_13TeV_powheg_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v2/MINIAODSIM
 
 [ZZTo2L2Nu_Powheg_Spring15_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns MiniAODv2
 # NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.564 
 negWeightFraction = 0.0
-datasetpath = /ZZTo2L2Nu_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ZZTo2L2Nu_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath = /ZZTo2L2Nu_13TeV_powheg_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v2/MINIAODSIM
+localdbspath = /ZZTo2L2Nu_13TeV_powheg_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v2/MINIAODSIM
 
 
 [WZTo3LNu_Powheg_Spring15_25ns]
@@ -283,12 +283,12 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns MiniAODv2
 # NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 4.102 
 negWeightFraction = 0.0
-datasetpath = /WZTo3LNu_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /WZTo3LNu_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath = /WZTo3LNu_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /WZTo3LNu_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 [WWTo2L2Nu_Powheg_Spring15_25ns]
 status = CREATED
@@ -401,12 +401,12 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns MiniAODv2
 #
 crosssection = 216.99
 negWeightFraction = 0.392
-datasetpath = /ST_t-channel_4f_leptonDecays_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ST_t-channel_4f_leptonDecays_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath = /ST_t-channel_4f_leptonDecays_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /ST_t-channel_4f_leptonDecays_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 ### WJets aMCatNLO
 
@@ -556,36 +556,15 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns MiniAODv2
 # NNLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns * PDG BR in semileptonic decay / 2
 crosssection = 182.15544
 negWeightFraction = 0.0
-datasetpath =  /TTJets_SingleLeptFromT_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath =  /TTJets_SingleLeptFromT_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath =  /TTJets_SingleLeptFromT_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath =  /TTJets_SingleLeptFromT_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
-[TTJets_SemiLeptFromT_Madgraph_MLM_Spring15_25ns_v2]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns
-# NNLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns * PDG BR in semileptonic decay / 2
-crosssection = 182.15544
-negWeightFraction = 0.0
-datasetpath =  /TTJets_SingleLeptFromT_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9_ext1-v1/MINIAODSIM
-localdbspath =  /TTJets_SingleLeptFromT_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9_ext1-v1/MINIAODSIM
 
-[TTJets_SemiLeptFromTbar_Madgraph_MLM_Spring15_25ns_v2]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns
-# NNLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
-crosssection = 182.15544
-negWeightFraction = 0.0
-datasetpath =  /TTJets_SingleLeptFromTbar_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9_ext1-v1/MINIAODSIM
-localdbspath = /TTJets_SingleLeptFromTbar_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9_ext1-v1/MINIAODSIM
+
 
 [TTJets_SemiLeptFromTbar_Madgraph_MLM_Spring15_25ns_v1]
 status = CREATED
@@ -599,16 +578,7 @@ negWeightFraction = 0.0
 datasetpath = /TTJets_SingleLeptFromTbar_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath =  /TTJets_SingleLeptFromTbar_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
-[TTJets_Madgraph_MLM_Spring15_noPU]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 noPU
-crosssection = 831.76
-negWeightFraction = 0.0
-datasetpath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-AsymptNoPU_MCRUN2_74_V9A-v2/MINIAODSIM
-localdbspath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-AsymptNoPU_MCRUN2_74_V9A-v2/MINIAODSIM
+
 
 [TTJets_Madgraph_MLM_Spring15_25ns]
 status = CREATED
@@ -677,12 +647,12 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.2529 
 negWeightFraction =  0.268
-datasetpath =  /TTZToLLNuNu_M-10_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath =  /TTZToLLNuNu_M-10_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath =  /TTZToLLNuNu_M-10_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v2/MINIAODSIM
+localdbspath =  /TTZToLLNuNu_M-10_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v2/MINIAODSIM
 
 [TTZToQQ_aMCatNLO_FXFX_Spring15_25ns]
 status = CREATED
