add configs for single lepton datasets

--- a/Input/Master74X_ReMiniAOD.ini
+++ b/Input/Master74X_ReMiniAOD.ini
@@ -165,6 +165,72 @@ datasetpath = /HTMHT/Run2015C-23Sep2015-v1/MINIAOD
 localdbspath = /HTMHT/Run2015C-23Sep2015-v1/MINIAOD
 
 
+
+[SingleElectron_Run2015C_23Sep2015]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW74X at13TeV Aachen at25ns SingleElectron Run2015C 
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /SingleElectron/Run2015C-23Sep2015-v1/MINIAOD
+localdbspath = /SingleElectron/Run2015C-23Sep2015-v1/MINIAOD
+
+[SingleElectron_Run2015D_05Oct2015]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW74X at13TeV Aachen at25ns SingleElectron Run2015D 
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /SingleElectron/Run2015D-05Oct2015-v1/MINIAOD
+localdbspath = /SingleElectron/Run2015D-05Oct2015-v1/MINIAOD
+[SingleElectron_Run2015D_PromptRecov4]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW74X at13TeV Aachen at25ns SingleElectron Run2015D Prompt
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /SingleElectron/Run2015D-PromptReco-v4/MINIAOD
+localdbspath =/SingleElectron/Run2015D-PromptReco-v4/MINIAOD
+
+[SingleMuon_Run2015C_23Sep2015]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW74X at13TeV Aachen at25ns SingleMuon Run2015C 
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /SingleMuon/Run2015C-23Sep2015-v1/MINIAOD
+localdbspath = /SingleMuon/Run2015C-23Sep2015-v1/MINIAOD
+
+[SingleMuon_Run2015D_05Oct2015]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW74X at13TeV Aachen at25ns SingleMuon Run2015D 
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /SingleMuon/Run2015D-05Oct2015-v1/MINIAOD
+localdbspath =/SingleMuon/Run2015D-05Oct2015-v1/MINIAOD
+[SingleMuon_Run2015D_PromptRecov4]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW74X at13TeV Aachen at25ns SingleMuon Run2015D Prompt
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /SingleMuon/Run2015D-PromptReco-v4/MINIAOD
+localdbspath =/SingleMuon/Run2015D-PromptReco-v4/MINIAOD
+
+
 [SynchFiles]
 groups = AOD
 datasetpath = 
