MET filters included

--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -1,6 +1,6 @@
 [general]
 InputPath = Input/
-OutputPath = /user/jschulte/AnalysisData/
+OutputPath = /user/schomakers/AnalysisData/
 LocalOutputPath = /user/jschulte/jobOutput/624Test
 SiteOutputPath = /pnfs/physik.rwth-aachen.de/cms/store/user
 SitePath = /store/user
@@ -14,7 +14,7 @@ makeCountHistos = True
 
 #additionalProducers = SUSYPAT EventCountProducer
 #additionalProducers = SUSYPATdata EventCountProducer
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer
+additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 
 
 groups = StandardModel SUSY
@@ -103,8 +103,8 @@ analogpath = <general|OutputPath>/LOG/analysis
 #~ inputDBS = phys03
 inputDBS = global
 storagepath = <general|SitePath>/jschulte
-histogramstoragepath = <general|SitePath>/jschulte/data/Histos
-histogramoutputpath = <general|SiteOutputPath>/jschulte/data/Histos
+histogramstoragepath = <general|SitePath>/cschomak/data/Histos
+histogramoutputpath = <general|SiteOutputPath>/cschomak/data/Histos
 cmsstoragepath = <general|SitePath>
 famospath = /home/home4/institut_1b/nmohr/famos/223
 famosdatapath = <general|SitePath>
