bugfix b-tagging, configs for running with MET filters

--- a/Input/25nsMC.ini
+++ b/Input/25nsMC.ini
@@ -1,5 +1,5 @@
 [general]
-additionalProducers = EventCountProducer electronMVAProducer
+additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
 #additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC
 
