--- a/Input/Master74X_ReMiniAOD.ini
+++ b/Input/Master74X_ReMiniAOD.ini
@@ -47,7 +47,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = Data CMSSW74X at13TeV Aachen at25ns DoubleMu Run2015D
+groups = Data CMSSW74X at13TeV Aachen at25ns DoubleMu Run2015D Oct05
 crosssection = 0.
 negWeightFraction = 0.
 datasetpath = /DoubleMuon/Run2015D-05Oct2015-v1/MINIAOD
