config changes for processing with V6 JEC corrections

--- a/Input/25nsMC.ini
+++ b/Input/25nsMC.ini
@@ -1,7 +1,7 @@
 [general]
-additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
+#additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
-#additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC
+additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer corrJetsProducerMC metProducerMiniAOD_MC
 
 [crab]
 
