--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -42,7 +42,7 @@ lumi_mask = ""
 publish = False
 pubDBSURL = phys03
 # all (merged)
-additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_MC.db","/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_DATA.db","/afs/cern.ch/user/c/cschomak/public/Summer15_50nsV4_DATA.db","/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV5_DATA.db"]
+additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV6_MC.db","/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV6_DATA.db"]
 #~ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_DATA.db"]
 #~ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_50nsV4_DATA.db"]
 
