--- a/CfgMerge/mergeData2015NonIso.ini
+++ b/CfgMerge/mergeData2015NonIso.ini
@@ -2,7 +2,7 @@
 tasks = cutsV28Dilepton
 basePath = /user/jschulte/Cleaning
 MCDatasets = .*_Summer12
-outPath = /user/jschulte/Trees/processedTreesTriggerAll
+outPath = /user/jschulte/Trees/processedTreesTriggerAll2
 counterSum = True
 
 [dileptonTree:cutsV28Dilepton]
@@ -33,7 +33,9 @@ EEExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20))
 EMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20))  
 MuMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) 
 
-
+[treeProcessor:CSCHaloFilter]
+type = EventFilter
+names = CfgMerge/eventlist_DoubleEG_csc2015.txt CfgMerge/eventlist_DoubleMuon_csc2015.txt CfgMerge/eventlist_MuonEG_csc2015.txt
 
 [treeProcessor:overlapHighPt]
 type = OverlapRemover
