--- a/Input/25nsData.ini
+++ b/Input/25nsData.ini
@@ -1,7 +1,7 @@
 [general]
-additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
+#additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
-#additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer metProducerMiniAOD
+additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer corrJetsProducer metProducerMiniAOD
 
 [crab]
 lumi_mask = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions15/13TeV/Cert_246908-259891_13TeV_PromptReco_Collisions15_25ns_JSON.txt 
