--- a/Input/Master74X_25nsMC_ReMiniAOD.ini
+++ b/Input/Master74X_25nsMC_ReMiniAOD.ini
@@ -539,17 +539,6 @@ negWeightFraction = 0.0
 datasetpath =  /TTJets_DiLept_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath = /TTJets_DiLept_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
-[TTJets_Dilepton_Madgraph_MLM_Spring15_25ns_v2]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns
-# NNLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
-crosssection = 87.31
-negWeightFraction = 0.0
-datasetpath =  /TTJets_DiLept_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9_ext1-v1/MINIAODSIM
-localdbspath =  /TTJets_DiLept_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9_ext1-v1/MINIAODSIM
 
 [TTJets_SemiLeptFromT_Madgraph_MLM_Spring15_25ns_v1]
 status = CREATED
@@ -778,6 +767,33 @@ crosssection = 0.1379
 negWeightFraction = 0.367
 datasetpath = /tZq_nunu_4f_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath = /tZq_nunu_4f_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+
+### Higgs
+
+[TTH_Powheg_Spring15_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Rare Powheg Spring15 at25ns MiniAODv2
+# NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 0.215 
+negWeightFraction = 0.
+datasetpath = /ttHToNonbb_M125_13TeV_powheg_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM 
+localdbspath = /ttHToNonbb_M125_13TeV_powheg_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM 
+
+[VH_Powheg_Spring15_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Rare Powheg Spring15 at25ns MiniAODv2
+# NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 0.952
+negWeightFraction = 0.
+datasetpath = /VHToNonbb_M125_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM 
+localdbspath = /VHToNonbb_M125_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM  
+
 
 [SynchFiles]
 groups = AOD
