--- a/Input/Master74X_ReMiniAOD.ini
+++ b/Input/Master74X_ReMiniAOD.ini
@@ -1,4 +1,4 @@
-[DoubleElectron_Run2015C_23Sep2015]
+[DoubleElectron_Run2015C_05Oct2015]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -6,8 +6,8 @@ localevents = -1
 groups = Data CMSSW74X at13TeV Aachen at25ns DoubleElectron Run2015C 
 crosssection = 0.
 negWeightFraction = 0.
-datasetpath = /DoubleEG/Run2015C-23Sep2015-v1/MINIAOD
-localdbspath = /DoubleEG/Run2015C-23Sep2015-v1/MINIAOD
+datasetpath = /DoubleEG/Run2015C_25ns-05Oct2015-v1/MINIAOD
+localdbspath = /DoubleEG/Run2015C_25ns-05Oct2015-v1/MINIAOD
 
 [DoubleElectron_Run2015D_05Oct2015]
 status = CREATED
@@ -53,7 +53,7 @@ negWeightFraction = 0.
 datasetpath = /DoubleMuon/Run2015D-05Oct2015-v1/MINIAOD
 localdbspath = /DoubleMuon/Run2015D-05Oct2015-v1/MINIAOD
 
-[DoubleMu_Run2015C_23Sep2015]
+[DoubleMu_Run2015C_05Oct2015]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -61,8 +61,8 @@ localevents = -1
 groups = Data CMSSW74X at13TeV Aachen at25ns DoubleMu Run2015C
 crosssection = 0.
 negWeightFraction = 0.
-datasetpath = /DoubleMuon/Run2015C-23Sep2015-v1/MINIAOD
-localdbspath =/DoubleMuon/Run2015C-23Sep2015-v1/MINIAOD
+datasetpath = /DoubleMuon/Run2015C_25ns-05Oct2015-v1/MINIAOD
+localdbspath =/DoubleMuon/Run2015C_25ns-05Oct2015-v1/MINIAOD
 
 [MuEG_Run2015D_05Oct2015]
 status = CREATED
@@ -75,7 +75,7 @@ negWeightFraction = 0.
 datasetpath =  /MuonEG/Run2015D-05Oct2015-v2/MINIAOD
 localdbspath = /MuonEG/Run2015D-05Oct2015-v2/MINIAOD
 
-[MuEG_Run2015C_23Sep2015]
+[MuEG_Run2015C_05Oct2015]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -83,8 +83,8 @@ localevents = -1
 groups = Data CMSSW74X at13TeV Aachen at25ns MuEG Run2015C
 crosssection = 0.
 negWeightFraction = 0.
-datasetpath =  /MuonEG/Run2015C-23Sep2015-v1/MINIAOD
-localdbspath = /MuonEG/Run2015C-23Sep2015-v1/MINIAOD
+datasetpath =  /MuonEG/Run2015C_25ns-05Oct2015-v1/MINIAOD
+localdbspath = /MuonEG/Run2015C_25ns-05Oct2015-v1/MINIAOD
 
 [MuEG_Run2015D_PromptRecov4]
 status = CREATED
@@ -98,7 +98,7 @@ datasetpath = /MuonEG/Run2015D-PromptReco-v4/MINIAOD
 localdbspath = /MuonEG/Run2015D-PromptReco-v4/MINIAOD
 
 
-[HT_Run2015C_23Sep2015]
+[HT_Run2015C_05Oct2015]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -106,8 +106,8 @@ localevents = -1
 groups = Data CMSSW74X at13TeV Aachen at25ns HT Run2015C
 crosssection = 0.
 negWeightFraction = 0.
-datasetpath = /JetHT/Run2015C-23Sep2015-v1/MINIAOD
-localdbspath = /JetHT/Run2015C-23Sep2015-v1/MINIAOD
+datasetpath = /JetHT/Run2015C_25ns-05Oct2015-v1/MINIAOD
+localdbspath = /JetHT/Run2015C_25ns-05Oct2015-v1/MINIAOD
 
 [HT_Run2015D_05Oct2015]
 status = CREATED
@@ -166,7 +166,7 @@ localdbspath = /HTMHT/Run2015C-23Sep2015-v1/MINIAOD
 
 
 
-[SingleElectron_Run2015C_23Sep2015]
+[SingleElectron_Run2015C_05Oct2015]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -174,8 +174,8 @@ localevents = -1
 groups = Data CMSSW74X at13TeV Aachen at25ns SingleElectron Run2015C 
 crosssection = 0.
 negWeightFraction = 0.
-datasetpath = /SingleElectron/Run2015C-23Sep2015-v1/MINIAOD
-localdbspath = /SingleElectron/Run2015C-23Sep2015-v1/MINIAOD
+datasetpath = /SingleElectron/Run2015C_25ns-05Oct2015-v1/MINIAOD
+localdbspath = /SingleElectron/Run2015C_25ns-05Oct2015-v1/MINIAOD
 
 [SingleElectron_Run2015D_05Oct2015]
 status = CREATED
@@ -198,7 +198,7 @@ negWeightFraction = 0.
 datasetpath = /SingleElectron/Run2015D-PromptReco-v4/MINIAOD
 localdbspath =/SingleElectron/Run2015D-PromptReco-v4/MINIAOD
 
-[SingleMuon_Run2015C_23Sep2015]
+[SingleMuon_Run2015C_05Oct2015]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -206,8 +206,8 @@ localevents = -1
 groups = Data CMSSW74X at13TeV Aachen at25ns SingleMuon Run2015C 
 crosssection = 0.
 negWeightFraction = 0.
-datasetpath = /SingleMuon/Run2015C-23Sep2015-v1/MINIAOD
-localdbspath = /SingleMuon/Run2015C-23Sep2015-v1/MINIAOD
+datasetpath = /SingleMuon/Run2015C_25ns-05Oct2015-v1/MINIAOD
+localdbspath = /SingleMuon/Run2015C_25ns-05Oct2015-v1/MINIAOD
 
 [SingleMuon_Run2015D_05Oct2015]
 status = CREATED
