--- a/CfgMerge/mergeData2015NonIso.ini
+++ b/CfgMerge/mergeData2015NonIso.ini
@@ -1,11 +1,11 @@
 [general]
-tasks = cutsV28Dilepton
+tasks = cutsV29Dilepton
 basePath = /user/jschulte/Cleaning
 MCDatasets = .*_Summer12
-outPath = /user/jschulte/Trees/processedTreesTriggerAll2
+outPath = /user/jschulte/Trees/processedTreesTriggerAll
 counterSum = True
 
-[dileptonTree:cutsV28Dilepton]
+[dileptonTree:cutsV29Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
@@ -35,7 +35,7 @@ MuMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20))
 
 [treeProcessor:CSCHaloFilter]
 type = EventFilter
-names = CfgMerge/eventlist_DoubleEG_csc2015.txt CfgMerge/eventlist_DoubleMuon_csc2015.txt CfgMerge/eventlist_MuonEG_csc2015.txt
+names = CfgMerge/DoubleEG_csc2015.txt CfgMerge/DoubleEG_ecalscn1043093.txt CfgMerge/DoubleMuon_csc2015.txt CfgMerge/DoubleMuon_ecalscn1043093.txt CfgMerge/MuonEG_csc2015.txt CfgMerge/MuonEG_ecalscn1043093.txt
 
 [treeProcessor:overlapHighPt]
 type = OverlapRemover
