update to cutsV29

--- a/CfgMerge/mergeData2015NonIso.ini
+++ b/CfgMerge/mergeData2015NonIso.ini
@@ -1,11 +1,11 @@
 [general]
-tasks = cutsV28Dilepton
-basePath = /user/jschulte/Cleaning
+tasks = cutsV29Dilepton
+basePath = /user/schomakers/trees/Cleaning
 MCDatasets = .*_Summer12
-outPath = /user/jschulte/Trees/processedTreesTriggerAll2
+outPath = /user/schomakers/trees/processedTrees
 counterSum = True
 
-[dileptonTree:cutsV28Dilepton]
+[dileptonTree:cutsV29Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
