Updates/hacks to get things running at 2.2 fb

--- a/CfgMerge/mergeData2015NonIso.ini
+++ b/CfgMerge/mergeData2015NonIso.ini
@@ -10,18 +10,18 @@ treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
 EESelection = HLTDiEleAll
-EEProcessors = overlapHighPt 
-EEFilter = overlapHighPt 
+EEProcessors = CSCHaloFilter overlapHighPt 
+EEFilter = CSCHaloFilter and overlapHighPt 
 
 EMuDataset = .*MuEG*
 EMuSelection = HLTMuEGAll
-EMuProcessors = overlapHighPt 
-EMuFilter = overlapHighPt 
+EMuProcessors = CSCHaloFilter overlapHighPt 
+EMuFilter = CSCHaloFilter and overlapHighPt 
 
 MuMuDataset = .*DoubleMu*
 MuMuSelection = HLTDiMuAll
-MuMuProcessors = overlapHighPt 
-MuMuFilter = overlapHighPt 
+MuMuProcessors = CSCHaloFilter overlapHighPt 
+MuMuFilter = CSCHaloFilter and overlapHighPt 
 
 OtherSelection = 
 
@@ -29,13 +29,13 @@ OtherSelection =
 #  -> possible only if running over trees with only tight leptons
 [treeProcessor:highPtSelector]
 type = SimpleSelector
-EEExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) 
-EMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20))  
-MuMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) 
+EEExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20))
+EMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) 
+MuMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20))
 
 [treeProcessor:CSCHaloFilter]
 type = EventFilter
-names = CfgMerge/eventlist_DoubleEG_csc2015.txt CfgMerge/eventlist_DoubleMuon_csc2015.txt CfgMerge/eventlist_MuonEG_csc2015.txt
+names = CfgMerge/csc2015.txt CfgMerge/ecalscn1043093.txt 
 
 [treeProcessor:overlapHighPt]
 type = OverlapRemover
