--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -1,6 +1,6 @@
 [general]
 InputPath = Input/
-OutputPath = /user/jschulte/AnalysisData/
+OutputPath = /user/schomakers/AnalysisData/
 LocalOutputPath = /user/jschulte/jobOutput/624Test
 SiteOutputPath = /pnfs/physik.rwth-aachen.de/cms/store/user
 SitePath = /store/user
@@ -33,7 +33,7 @@ groups = StandardModel SUSY
 StageoutSite = T2_DE_RWTH
 #~ CrabServer = Cern
 total_number_of_lumis = -1
-lumis_per_job = 100
+lumis_per_job = 50
 events_per_job = 5
 lumi_mask = ""
 # lumi recovery / skimming
@@ -102,9 +102,9 @@ analogpath = <general|OutputPath>/LOG/analysis
 #~ dbsurl = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
 #~ inputDBS = phys03
 inputDBS = global
-storagepath = <general|SitePath>/jschulte
-histogramstoragepath = <general|SitePath>/jschulte/data/Histos
-histogramoutputpath = <general|SiteOutputPath>/jschulte/data/Histos
+storagepath = <general|SitePath>/cschomak
+histogramstoragepath = <general|SitePath>/cschomak/data/Histos
+histogramoutputpath = <general|SiteOutputPath>/cschomak/data/Histos
 cmsstoragepath = <general|SitePath>
 famospath = /home/home4/institut_1b/nmohr/famos/223
 famosdatapath = <general|SitePath>
