Implementations for 13 TeV signal scan

--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -14,7 +14,8 @@ makeCountHistos = True
 
 #additionalProducers = SUSYPAT EventCountProducer
 #additionalProducers = SUSYPATdata EventCountProducer
-additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
+#~ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
+additionalProducers = EventCountProducer electronMVAProducer
 
 
 groups = StandardModel SUSY
@@ -23,7 +24,7 @@ groups = StandardModel SUSY
        CMSSW74X
        Aachen Imperial FastSim Scan CMSSM
        Pythia6 Pythia8 Madgraph MCatNLO Alpgen Herwig Powheg aMCatNLO
-       TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan
+       TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan Signal
        at13TeV at25ns at50ns noPU
        SingleElectron DoubleElectron SingleMuon DoubleMu ElectronHad MuHad HT TauPlusX MuEG MET HTMHT 
        Data MC AOD RelVal MiniAOD MiniAODv2 Prompt Oct05
@@ -42,7 +43,7 @@ lumi_mask = ""
 publish = False
 pubDBSURL = phys03
 # all (merged)
-additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV6_MC.db","/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV6_DATA.db"]
+additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/MCRUN2_74_V9.db","/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV6_MC.db","/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV6_DATA.db","/afs/cern.ch/user/c/cschomak/public/CSVv2.csv","/afs/cern.ch/user/c/cschomak/public/CSV_13TEV_Combined_20_11_2015.csv"]
 #~ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_DATA.db"]
 #~ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_50nsV4_DATA.db"]
 
