adapt tree postprocessor to apply cuts first

--- a/CfgMerge/mergeData2015NonIso.ini
+++ b/CfgMerge/mergeData2015NonIso.ini
@@ -1,8 +1,8 @@
 [general]
 tasks = cutsV29Dilepton
-basePath = /user/schomakers/trees/Cleaning
+basePath = /home/jan/Doktorarbeit/Dilepton/cleanTest/
 MCDatasets = .*_Summer12
-outPath = /user/schomakers/trees/processedTrees
+outPath = /home/jan/Doktorarbeit/Dilepton/cleanTest/test
 counterSum = True
 
 [dileptonTree:cutsV29Dilepton]
@@ -11,17 +11,17 @@ objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
 EESelection = HLTDiEleAll
 EEProcessors = CSCHaloFilter overlapHighPt 
-EEFilter = CSCHaloFilter and overlapHighPt 
+EEFilter = highPtSelector 
 
 EMuDataset = .*MuEG*
 EMuSelection = HLTMuEGAll
 EMuProcessors = CSCHaloFilter overlapHighPt 
-EMuFilter = CSCHaloFilter and overlapHighPt 
+EMuFilter = highPtSelector 
 
 MuMuDataset = .*DoubleMu*
 MuMuSelection = HLTDiMuAll
 MuMuProcessors = CSCHaloFilter overlapHighPt 
-MuMuFilter = CSCHaloFilter and overlapHighPt 
+MuMuFilter = highPtSelector 
 
 OtherSelection = 
 
@@ -35,7 +35,7 @@ MuMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20))
 
 [treeProcessor:CSCHaloFilter]
 type = EventFilter
-names = CfgMerge/csc2015.txt CfgMerge/ecalscn1043093.txt 
+names = CfgMerge/DoubleEG_csc2015.txt CfgMerge/DoubleEG_ecalscn1043093.txt CfgMerge/DoubleMuon_csc2015.txt CfgMerge/DoubleMuon_ecalscn1043093.txt CfgMerge/MuonEG_csc2015.txt CfgMerge/MuonEG_ecalscn1043093.txt
 
 [treeProcessor:overlapHighPt]
 type = OverlapRemover
